--- a/Files/squad.css
+++ b/Files/squad.css
@@ -8,3 +8,156 @@
   height: 85%;
   border: 1px solid red;
 }
+.matchHeading {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 10%;
+  border: 1px solid red;
+}
+.matchHeading a {
+  color: white;
+  font-size: 2.5rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.matchContent {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 90%;
+  border: 1px solid red;
+  overflow-y: scroll;
+}
+.matchUI {
+  display: none;
+  /* background-color: violet; */
+}
+.matchContentPart2 {
+  position: relative;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 90%;
+  border: 1px solid red;
+}
+.matchStartUI {
+  display: flex;
+}
+.matchContent::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 8px black;
+  visibility: hidden;
+}
+.matchContent::-webkit-scrollbar-track {
+  background-color: transparent;
+  width: 10px;
+  height: 10px;
+}
+.matchContent::-webkit-scrollbar-thumb {
+  background: white;
+  width: 10px;
+  height: 20px;
+  border-radius: 50px;
+  border: 2px solid black;
+}
+.matchContent::-webkit-scrollbar-corner {
+  background-color: black;
+  width: 10px;
+}
+.matchBoxes {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  width: 90%;
+  height: 20%;
+  border: 1px solid white;
+}
+.matchBoxesHeading {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 40%;
+  border: 1px solid white;
+  overflow-wrap: scroll;
+}
+.sr {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 100%;
+  border: 1px solid red;
+}
+.sr a {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: white;
+  font-size: 1.5rem;
+}
+.matchTeamName {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 100%;
+  border: 1px solid red;
+}
+.matchTeamName a {
+  color: white;
+  font-size: 1.5rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.matchBoxesBody {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 60%;
+  border: 1px solid white;
+}
+.winningEmoji {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 100%;
+  border: 1px solid white;
+}
+.matchStartBtn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 100%;
+  border: 1px solid white;
+}
+.matchStartBtnAfter {
+  width: 80%;
+}
+.matchStartBtn button,
+.submitBtn button {
+  transform: scale(1.2);
+  width: 3rem;
+  cursor: pointer;
+}
