--- a/Files/squad.css
+++ b/Files/squad.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: 85%;
   border: 1px solid red;
+  overflow: hidden;
 }
 .matchHeading {
   position: relative;
@@ -31,10 +32,15 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 80%;
-  border: 1px solid red;
+  height: 80% /*20-80%*/;
+  border: 0px solid red;
   overflow-y: scroll;
 }
+.matchContentAcive {
+  height: 20%;
+  transition: 0.5s;
+}
+
 .matchContent::-webkit-scrollbar {
   width: 10px;
   border-radius: 10px;
@@ -64,11 +70,12 @@
   align-items: center;
   width: 100%;
   height: 10%;
-  border: 1px solid white;
+  border: 0px solid white;
 }
 .finalSquadCover a {
   color: #09aeff;
   font-size: 1.2rem;
+  margin-top: -1rem;
   padding: 0.1rem 1rem;
   text-decoration: none;
   border: 2px solid #09aeff;
@@ -88,6 +95,7 @@
   margin-bottom: 0.5rem;
   width: 90%;
   height: 20%;
+  min-height: 90px;
   border: 1px solid white;
   border-radius: 50px;
 }
@@ -99,9 +107,18 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 40%;
+  height: 50%; /*40*/
   border: 0px solid white;
   overflow-wrap: scroll;
+}
+.matchCategory {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  border: 0px solid red;
 }
 .matchTeamName {
   position: relative;
@@ -109,12 +126,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 50%; /*100*/
   border: 0px solid red;
 }
-.matchTeamName a {
+.matchTeamName a,
+.matchCategory a {
   color: white;
-  margin-top: 0.8rem;
+  margin-top: 0.5rem; /**/
   font-size: 1.2rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -124,12 +142,12 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 60%;
+  height: 50%; /*60*/
   border: 0px solid white;
 }
 .matchStartBtn i {
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding-right: 1rem;
 }
 .matchStartBtn {
@@ -142,9 +160,10 @@
   border: 0px solid white;
 }
 .matchStartBtn button {
-  transform: scale(1.2);
+  transform: scale(1.1);
   width: 3rem;
   cursor: pointer;
+  margin-top: -0.5rem;
   border-radius: 20px;
   background-color: transparent;
   color: white;
