--- a/Files/squad.css
+++ b/Files/squad.css
@@ -13,6 +13,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
@@ -54,8 +55,8 @@
 }
 .matchContent::-webkit-scrollbar-thumb {
   background: white;
-  width: 10px;
-  height: 20px;
+  width: 5px;
+  height: 2px;
   border-radius: 50px;
   border: 2px solid black;
 }
@@ -75,7 +76,7 @@
 .finalSquadCover a {
   color: #09aeff;
   font-size: 1.2rem;
-  margin-top: -1rem;
+  /* margin-top: -1rem; */
   padding: 0.1rem 1rem;
   text-decoration: none;
   border: 2px solid #09aeff;
@@ -91,8 +92,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
   width: 90%;
   height: 20%;
   min-height: 90px;
@@ -111,6 +111,7 @@
   border: 0px solid white;
   overflow-wrap: scroll;
 }
+
 .matchCategory {
   position: relative;
   display: flex;
@@ -147,8 +148,20 @@
 }
 .matchStartBtn i {
   color: white;
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding-right: 1rem;
+}
+.rematchBtn i {
+  position: relative;
+  color: white;
+  font-size: 0.8rem;
+  /* margin-left: 4.2rem; */
+  /* margin-top: -1.7rem; */
+  transform: translate(1rem, -1.7rem);
+  cursor: pointer;
+}
+.rematchBtn:hover i {
+  font-size: 0.7rem;
 }
 .matchStartBtn {
   position: relative;
