--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -36,11 +36,11 @@
   width: 100%;
   height: 80%;
   border: 0px solid red;
+  transition: 1s ease-in-out;
   overflow-y: scroll;
 }
 .matchContentPart2Acive {
   height: 20%;
-  transition: 0.5s;
 }
 
 .currentMatch {
