--- a/Files/squad.css
+++ b/Files/squad.css
@@ -37,6 +37,8 @@
   border: 0px solid red;
   overflow-y: scroll;
   transition: 1s ease-in-out;
+  background-image: url(images/squadBack.jpeg);
+  background-size: cover;
 }
 .matchContentAcive {
   height: 20%;
@@ -96,8 +98,25 @@
   width: 90%;
   height: 20%;
   min-height: 90px;
-  border: 1px solid white;
   border-radius: 50px;
+  background-color: rgba(225, 225, 225, 0.7);
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(225, 225, 225, 0.25);
+  border-top: 1px solid rgba(225, 225, 225, 0.5);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.5);
+  backdrop-filter: blur(10px);
+  /* filter: blur(0.1px); */
+}
+
+.matchTeamName a,
+.matchCategory a {
+  /* z-index: 20; */
+  display: block;
+  color: black;
+  margin-top: 0.5rem; /**/
+  font-size: 1.2rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .matchBoxesHeading {
   position: relative;
@@ -130,14 +149,6 @@
   height: 50%; /*100*/
   border: 0px solid red;
 }
-.matchTeamName a,
-.matchCategory a {
-  color: white;
-  margin-top: 0.5rem; /**/
-  font-size: 1.2rem;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
 .matchBoxesBody {
   position: relative;
   display: flex;
@@ -157,7 +168,7 @@
   font-size: 0.8rem;
   /* margin-left: 4.2rem; */
   /* margin-top: -1.7rem; */
-  transform: translate(1rem, -1.7rem);
+  transform: translate(1.3rem, -0.8rem);
   cursor: pointer;
 }
 .rematchBtn:hover i {
