--- a/Files/currentPosition.css
+++ b/Files/currentPosition.css
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   width: 100%;
   height: 0% /*80%*/;
-  border: 1px solid red;
+  border: 2px solid white;
   border-top-right-radius: 30px;
   border-top-left-radius: 30px;
   transition: 1s ease-in-out;
@@ -42,6 +42,12 @@
   height: 80%;
   border: 0px solid red;
   overflow-y: scroll;
+  background-image: url(images/SAVE_20211207_144712.jpg);
+  background-position: center;
+  background-size: cover;
+  background-position-y: 0.3rem;
+  background-position-x: -2.5rem;
+  background-repeat: repeat;
 }
 .allProfile::-webkit-scrollbar {
   width: 10px;
@@ -78,9 +84,15 @@
   min-height: 84px;
   border: 1px solid white;
   border-radius: 50px;
+  background-color: rgba(225, 225, 225, 0.7);
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(225, 225, 225, 0.25);
+  border-top: 1px solid rgba(225, 225, 225, 0.5);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.5);
+  backdrop-filter: blur(10px);
 }
 .profileList a {
-  color: white;
+  color: black;
   letter-spacing: 0.1rem;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
