--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 85%;
+  height: 80%;
   border: 0px solid red;
   overflow: hidden;
 }
@@ -13,15 +13,16 @@
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 20%;
+  height: 13%;
   border: 0px solid red;
 }
 .matchHeading a {
   color: white;
-  margin-top: 3rem;
+  margin-top: 0rem;
   font-size: 2rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -34,10 +35,16 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 80%;
+  height: 87%;
   border: 0px solid red;
   transition: 1s ease-in-out;
   overflow-y: scroll;
+  background-image: url(images/SAVE_20211205_100139.jpg);
+  background-position: center;
+  background-size: cover;
+  background-position-y: 0rem;
+  background-position-x: -4rem;
+  background-repeat: repeat;
 }
 .matchContentPart2Acive {
   height: 20%;
@@ -54,8 +61,13 @@
   width: 90%;
   height: 70%;
   min-height: 370px;
-  border: 1px solid red;
   border-radius: 40px;
+  background-color: rgba(225, 225, 225, 0.7);
+  /* box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5); */
+  border: 1px solid black;
+  /* border-top: 1px solid rgba(225, 225, 225, 0.5);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.5); */
+  backdrop-filter: blur(2px);
 }
 .matchContentPart2::-webkit-scrollbar {
   width: 10px;
@@ -100,7 +112,7 @@
   border: 0px solid white;
 }
 .currentMatchName a {
-  color: white;
+  color: black;
   margin-top: 0.5rem;
   font-size: 1.8rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -116,7 +128,7 @@
   border: 0px solid white;
 }
 .currentMatchTime a {
-  color: white;
+  color: black;
   margin-top: 0.5rem;
   font-size: 1.5rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -144,7 +156,7 @@ form {
   border: 0px solid red;
 }
 .winnerCover label {
-  color: white;
+  color: green;
   margin-top: -0.5rem;
   font-size: 1.7rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -169,7 +181,7 @@ form {
   padding: 1rem;
   width: 90%;
   height: 50%;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 50px;
 }
 
@@ -181,7 +193,7 @@ form {
   padding: 1rem;
   width: 90%;
   height: 50%;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 50px;
 }
 .playerwinnerName {
@@ -194,7 +206,7 @@ form {
   border: 0px solid red;
 }
 .playerwinnerName {
-  color: white;
+  color: black;
   font-size: 1.5rem;
 }
 .playerInput {
@@ -209,7 +221,10 @@ form {
 .playerInput input {
   width: 3.5rem;
   height: 1.7rem;
+  background-color: transparent;
   text-align: center;
+  border-radius: 20px;
+  padding-left: 0.8rem;
 }
 .submitBtn {
   position: relative;
@@ -222,14 +237,16 @@ form {
 }
 .submitBtn a {
   color: black;
+  text-transform: uppercase;
+  letter-spacing: 0.08rem;
   margin-top: 1rem;
   font-size: 1.2rem;
   padding: 0.1rem 1rem;
   text-decoration: none;
-  border: 2px solid #09aeff;
+  border: 2px solid black;
   border-radius: 20px;
   cursor: pointer;
-  background-color: darkcyan;
+  background-color: transparent;
 }
 .submitBtn a:hover {
   font-size: 1rem;
