--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -44,6 +44,12 @@
   height: 90%;
   border: 1px solid white;
   overflow-y: scroll;
+  background-image: url(images/SAVE_20211207_144712.jpg);
+  background-position: center;
+  background-size: cover;
+  background-position-y: 0rem;
+  background-position-x: 0rem;
+  background-repeat: repeat;
 }
 .tournamentProfileList {
   position: relative;
@@ -56,8 +62,12 @@
   width: 80%;
   min-height: 30%;
   height: min-content;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 30px;
+  background-color: rgba(225, 225, 225, 0.7);
+  /* border-top: 1px solid rgba(225, 225, 225, 0.5);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.5); */
+  backdrop-filter: blur(10px);
 }
 .tournamentProfileBody::-webkit-scrollbar {
   width: 10px;
@@ -92,12 +102,12 @@
   padding: 0.5rem;
   width: 75%;
   height: auto;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 30px;
 }
 .tntProfItems a {
   display: block;
-  color: white;
+  color: black;
   margin: 0.05rem 0.5rem;
   letter-spacing: 0.15rem;
   transform: translateX(1rem);
