--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -8,6 +8,12 @@
   height: 80%;
   border: 0px solid red;
   overflow: hidden;
+  background-image: url(images/playerProfile.jpg);
+  background-position: center;
+  background-size: cover;
+  /* background-position-y: -4rem; */
+  background-position-x: -6rem;
+  background-repeat: repeat;
 }
 .matchHeading {
   position: relative;
@@ -18,7 +24,9 @@
   flex-wrap: wrap;
   width: 100%;
   height: 13%;
-  border: 0px solid red;
+  border: 2px solid white;
+  border-radius: 50px;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 .matchHeading a {
   color: white;
@@ -39,12 +47,6 @@
   border: 0px solid red;
   transition: 1s ease-in-out;
   overflow-y: scroll;
-  background-image: url(images/SAVE_20211205_100139.jpg);
-  background-position: center;
-  background-size: cover;
-  background-position-y: 0rem;
-  background-position-x: -4rem;
-  background-repeat: repeat;
 }
 .matchContentPart2Acive {
   height: 20%;
@@ -62,11 +64,8 @@
   height: 70%;
   min-height: 370px;
   border-radius: 40px;
-  background-color: rgba(225, 225, 225, 0.7);
-  /* box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5); */
+  background-color: rgba(0, 0, 0, 0.7);
   border: 1px solid black;
-  /* border-top: 1px solid rgba(225, 225, 225, 0.5);
-  border-bottom: 1px solid rgba(225, 225, 225, 0.5); */
   backdrop-filter: blur(2px);
 }
 .matchContentPart2::-webkit-scrollbar {
@@ -112,7 +111,7 @@
   border: 0px solid white;
 }
 .currentMatchName a {
-  color: black;
+  color: white;
   margin-top: 0.5rem;
   font-size: 1.8rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -128,7 +127,7 @@
   border: 0px solid white;
 }
 .currentMatchTime a {
-  color: black;
+  color: white;
   margin-top: 0.5rem;
   font-size: 1.5rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -156,7 +155,7 @@ form {
   border: 0px solid red;
 }
 .winnerCover label {
-  color: green;
+  color: limegreen;
   margin-top: -0.5rem;
   font-size: 1.7rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -181,7 +180,7 @@ form {
   padding: 1rem;
   width: 90%;
   height: 50%;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 50px;
 }
 
@@ -193,7 +192,7 @@ form {
   padding: 1rem;
   width: 90%;
   height: 50%;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 50px;
 }
 .playerwinnerName {
@@ -206,7 +205,7 @@ form {
   border: 0px solid red;
 }
 .playerwinnerName {
-  color: black;
+  color: white;
   font-size: 1.5rem;
 }
 .playerInput {
@@ -219,6 +218,8 @@ form {
   border: 0px solid red;
 }
 .playerInput input {
+  color: white;
+  border: 1px solid white;
   width: 3.5rem;
   height: 1.7rem;
   background-color: transparent;
@@ -236,14 +237,14 @@ form {
   border: 0px solid red;
 }
 .submitBtn a {
-  color: black;
+  color: white;
   text-transform: uppercase;
   letter-spacing: 0.08rem;
   margin-top: 1rem;
   font-size: 1.2rem;
   padding: 0.1rem 1rem;
   text-decoration: none;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 20px;
   cursor: pointer;
   background-color: transparent;
