--- a/Files/currentPosition.css
+++ b/Files/currentPosition.css
@@ -10,6 +10,7 @@
   border-top-right-radius: 30px;
   border-top-left-radius: 30px;
   transition: 1s ease-in-out;
+  background-color: black;
 }
 .currentPositionCoverActive {
   display: flex;
@@ -25,6 +26,7 @@
   width: 100%;
   height: 20%;
   border: 0px solid red;
+  /* background-color: black; */
 }
 .profileHeading a {
   color: white;
@@ -42,11 +44,11 @@
   height: 80%;
   border: 0px solid red;
   overflow-y: scroll;
-  background-image: url(images/SAVE_20211207_144712.jpg);
+  background-image: url(images/playerProfile.jpg);
   background-position: center;
   background-size: cover;
-  background-position-y: 0.3rem;
-  background-position-x: -2.5rem;
+  background-position-y: -2.5rem;
+  background-position-x: -7rem;
   background-repeat: repeat;
 }
 .allProfile::-webkit-scrollbar {
@@ -82,13 +84,10 @@
   width: 75%;
   height: 30%;
   min-height: 84px;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.7);
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  border: 1px solid rgba(225, 225, 225, 0.25);
-  border-top: 1px solid rgba(225, 225, 225, 0.5);
-  border-bottom: 1px solid rgba(225, 225, 225, 0.5);
   backdrop-filter: blur(10px);
 }
 .profileList a {
