--- a/Files/squad.css
+++ b/Files/squad.css
@@ -88,7 +88,7 @@
   border: 2px solid white;
   border-radius: 20px;
   cursor: pointer;
-  background-color: darkgreen;
+  background-color: rgba(45, 85, 205, 0.5);
 }
 .finalSquadCover a:hover {
   font-size: 1.5rem;
@@ -199,7 +199,7 @@
   color: white;
 }
 .matchStartBtn #matchResult {
-  color: white;
+  color: orangered;
   font-size: 1rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
