--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -24,16 +24,17 @@
   flex-wrap: wrap;
   width: 100%;
   height: 13%;
-  border: 2px solid white;
-  border-radius: 50px;
-  background-color: rgba(0, 0, 0, 0.7);
 }
 .matchHeading a {
   color: lightseagreen;
   margin-top: 0rem;
   font-size: 2rem;
+  padding: 0 2rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  border: 2px solid white;
+  border-radius: 50px;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 .matchContentPart2 {
   position: relative;
@@ -65,7 +66,7 @@
   min-height: 370px;
   border-radius: 40px;
   background-color: rgba(0, 0, 0, 0.7);
-  border: 1px solid black;
+  border: 2px solid white;
   backdrop-filter: blur(2px);
 }
 .matchContentPart2::-webkit-scrollbar {
@@ -111,7 +112,7 @@
   border: 0px solid white;
 }
 .currentMatchName a {
-  color: yellow;
+  color: orange;
   margin-top: 0.5rem;
   font-size: 1.8rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
