--- a/Files/squad.css
+++ b/Files/squad.css
@@ -19,17 +19,18 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 95%;
-  height: 10%;
-  border: 1px solid white;
-  border-radius: 50px;
-  background-color: rgba(45, 85, 205, 0.5);
+  height: 12%;
 }
 .matchHeading a {
   color: white;
+  padding: 0 1rem;
   letter-spacing: 0.1rem;
   font-size: 2rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  border: 1px solid white;
+  border-radius: 50px;
+  background-color: rgba(45, 85, 205, 0.5);
 }
 .matchContent {
   position: relative;
@@ -38,7 +39,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 80% /*20-80%*/;
+  height: 78% /*20-80%*/;
   border: 0px solid red;
   overflow-y: scroll;
   transition: 1s ease-in-out;
