--- a/Files/squad.css
+++ b/Files/squad.css
@@ -200,7 +200,7 @@
   color: white;
 }
 .matchStartBtn #matchResult {
-  color: orangered;
+  color: white;
   font-size: 1rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
