--- a/Files/body.css
+++ b/Files/body.css
@@ -6,7 +6,13 @@
   flex-wrap: wrap;
   width: 100%;
   height: 80%;
-  border: 1px solid red;
+  border: 0px solid red;
+  background-image: url(images/ocean.jpeg);
+  background-position: center;
+  background-size: cover;
+  /* background-position-y: -4rem; */
+  /* background-position-x: 2rem;  */
+  background-repeat: repeat;
 }
 .headingBody {
   position: relative;
@@ -15,26 +21,38 @@
   align-items: center;
   width: 100%;
   height: 15%;
-  border: 1px solid red;
+  border: 0px solid red;
 }
 .headingBody a {
   color: white;
-  /* margin-top: 1rem; */
-  font-size: 3rem;
+  margin-top: 1.5rem;
+  padding: 0 2rem;
+  font-size: 2.8rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: bolder;
+  border: 1px solid white;
+  border-radius: 50px;
+  background-color: rgba(45, 85, 205, 0.5);
 }
 .contentBody {
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 85%;
   border: 0px solid white;
 }
 form {
-  width: 100%;
-  height: 100%;
+  width: 85%;
+  height: 85%;
+  min-height: 400px;
+  border: 1px solid white;
+  border-radius: 50px;
+  background-color: rgba(225, 225, 225, 0.5);
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border: 1px solid black;
+  backdrop-filter: blur(5px);
 }
 .formElement {
   position: relative;
@@ -45,7 +63,7 @@ form {
   flex-wrap: wrap;
   width: 100%;
   height: 28%;
-  border: 1px solid white;
+  border: 0px solid white;
 }
 .formElementHeading {
   position: relative;
@@ -54,11 +72,16 @@ form {
   align-items: center;
   width: 100%;
   height: 50%;
-  border: 1px solid white;
+  border: 0px solid white;
 }
 .formElementHeading a {
   color: white;
   font-size: 1.2rem;
+  margin-top: 0.5rem;
+  padding: 0.05rem 1rem;
+  border-radius: 50px;
+  border: 1px solid white;
+  background-color: rgba(23, 236, 4, 0.5);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
@@ -68,7 +91,7 @@ form {
   justify-content: center;
   width: 100%;
   height: 50%;
-  border: 1px solid white;
+  border: 0px solid white;
 }
 .formBodyInput {
   position: relative;
@@ -77,13 +100,18 @@ form {
   align-items: center;
   width: 50%;
   height: 100%;
-  border: 1px solid white;
+  border: 0px solid white;
 }
 .formBodyInput input {
   width: 50%;
   height: 50%;
-  border: 1px solid red;
+  border: 1px solid black;
   text-align: center;
+  border-radius: 50px;
+  background-color: rgba(3, 196, 230, 0.5);
+}
+.formBodyInput input::placeholder {
+  color: black;
 }
 .formBodyBtn {
   position: relative;
@@ -92,7 +120,7 @@ form {
   align-items: center;
   width: 50%;
   height: 100%;
-  border: 1px solid white;
+  border: 0px solid white;
 }
 .formBodyBtn .saveBtn,
 .formBodyBtn .addBtn,
@@ -102,19 +130,27 @@ form {
   height: 1.5rem;
   cursor: pointer;
   font-size: 1rem;
-  background-color: darkcyan;
+  background-color: transparent;
+  background-color: rgba(3, 196, 230, 0.5);
+
+  border-radius: 50px;
 }
 .formBodyBtn .saveBtn:hover,
-.formBodyBtn .addBtn:hover {
+.formBodyBtn .addBtn:hover,
+.formBodyBtn .gamePointBtn:hover {
   transform: scale(0.9);
 }
 .formElement .nextBtn {
-  color: #09aeff;
+  color: white;
+  padding: 0 1.5rem;
   font-size: 2rem;
   text-decoration: none;
+  border: 1px solid white;
+  background-color: rgba(45, 85, 205, 0.5);
+  border-radius: 50px;
 }
 .formElement .nextBtn:hover {
   color: #0fffff;
-  font-size: 2.2rem;
+  font-size: 1.8rem;
   cursor: pointer;
 }
