--- a/Files/squad.css
+++ b/Files/squad.css
@@ -105,10 +105,10 @@
   height: 20%;
   min-height: 90px;
   border-radius: 50px;
-  background-color: rgba(225, 225, 225, 0.7);
+  background-color: rgba(225, 225, 225, 0.5);
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border: 1px solid black;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
   /* filter: blur(0.1px); */
 }
 
@@ -168,6 +168,7 @@
 }
 .rematchBtn i {
   position: relative;
+  /* display: flex; */
   color: white;
   font-size: 0.8rem;
   /* margin-left: 4.2rem; */
@@ -178,7 +179,7 @@
 .rematchBtn:hover i {
   font-size: 0.7rem;
 }
-.rematchDisable {
+.rematchDisable i {
   display: none;
 }
 .matchStartBtn {
