--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -31,13 +31,17 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 10%;
-  border: 1px solid white;
+  height: 15%;
+  border: 0px solid white;
   border-radius: 50px;
 }
 .tournamentProfileHeading a {
   color: white;
   font-size: 1.9rem;
+  padding: 0.2rem 1rem;
+  border: 1px solid white;
+  background-color: rgba(226, 40, 233, 0.4);
+  border-radius: 50px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
@@ -48,7 +52,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 90%;
+  height: 85%;
   border: 0px solid white;
   overflow-y: scroll;
 }
@@ -66,8 +70,6 @@
   border: 1px solid black;
   border-radius: 30px;
   background-color: rgba(225, 225, 225, 0.7);
-  /* border-top: 1px solid rgba(225, 225, 225, 0.5);
-  border-bottom: 1px solid rgba(225, 225, 225, 0.5); */
   backdrop-filter: blur(10px);
 }
 .tournamentProfileBody::-webkit-scrollbar {
@@ -122,6 +124,11 @@
 #speakingBtn {
   cursor: pointer;
   font-size: 1rem;
+  border: 1px solid white;
+  background-color: rgba(45, 85, 205, 0.5);
+}
+#speakingBtn a {
+  color: white;
 }
 #speakingBtn:hover {
   cursor: pointer;
