--- a/Files/footer.css
+++ b/Files/footer.css
@@ -1,8 +1,131 @@
 .footer {
   position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
   align-self: flex-end;
   width: 100%;
   height: 10%;
-  border: 2px solid yellow;
+  border: 1px solid #09aeff;
+}
+:root {
+  --clr: black;
+}
+.navigator {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  border: 0px solid white;
+  background-color: rgba(0, 0, 0, 1);
+  overflow: hidden;
+}
+.navigator ul {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  height: 65%;
+  border: 0px solid red;
+  margin-bottom: 0.2rem;
+  background-color: white;
+  border-radius: 30px;
+}
+.navigator ul li {
+  position: relative;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  border: 0px solid red;
+}
+.navigator ul li a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 20;
+}
+.navigator ul li a .icon {
+  position: relative;
+  display: block;
+  color: var(--clr);
+  font-size: 1rem;
+  transition: 0.5s;
+  transform: translateY(0rem);
+  /* transform: translateY(-1rem); */
+}
+.navigator ul li.active a .icon {
+  transform: translateY(-0.9rem);
+}
+.navigator ul li a .iconText {
+  position: absolute;
+  display: block;
+  color: var(--clr);
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  transition: 0.5s;
+  opacity: 0;
+  transform: translateY(2rem);
+}
+.navigator ul li.active a .iconText {
+  opacity: 1;
+  transform: translateY(0.5rem);
+}
+.indicator {
+  position: absolute;
+  display: flex;
+  /* justify-self: self-start; */
+  width: 2rem;
+  height: 2rem;
+  top: -0.9rem;
+  left: 1.17rem; /*1.14*/
+  /* transform: translateX(2rem); */
+  background-color: #29fd53;
+  border-radius: 50px;
+  border: 4px solid var(--clr);
+  transition: 0.5s;
+}
+.indicator::before {
+  content: "";
+  position: absolute;
+  width: 0.4rem;
+  height: 0.4rem;
+  top: 0.58rem;
+  left: -0.57rem;
+  transform: scale(1);
+  background-color: transparent;
+  border-top-right-radius: 20px;
+  border-top: 3.5px solid var(--clr);
+  border-right: 3.5px solid var(--clr);
+}
+.indicator::after {
+  content: "";
+  position: absolute;
+  width: 0.4rem;
+  height: 0.4rem;
+  top: 0.58rem;
+  right: -0.57rem;
+  background-color: transparent;
+  border-top-left-radius: 20px;
+  border-top: 3.5px solid var(--clr);
+  border-left: 3.5px solid var(--clr);
+}
+.navigator ul li:nth-child(1).active ~ .indicator {
+  transform: translateX(calc(-0.04rem));
+}
+
+.navigator ul li:nth-child(2).active ~ .indicator {
+  transform: translateX(calc(4.2rem));
+}
+
+.navigator ul li:nth-child(3).active ~ .indicator {
+  transform: translateX(calc(8.25rem));
+}
+
+.navigator ul li:nth-child(4).active ~ .indicator {
+  transform: translateX(calc(12.27rem));
 }
