--- a/Files/index.css
+++ b/Files/index.css
@@ -12,6 +12,7 @@
   height: 100vh;
   border: 0px solid red;
   background-color: black;
+  overflow: hidden;
 }
 .mobileCover {
   position: relative;
