--- a/Files/body.css
+++ b/Files/body.css
@@ -53,6 +53,7 @@ form {
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border: 1px solid black;
   backdrop-filter: blur(5px);
+  z-index: 200;
 }
 .formElement {
   position: relative;
