--- a/Files/footer.css
+++ b/Files/footer.css
@@ -2,11 +2,12 @@
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   align-self: flex-end;
   width: 100%;
   height: 10%;
   border: 1px solid #09aeff;
+  overflow: hidden;
 }
 :root {
   --clr: black;
@@ -15,30 +16,25 @@
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  width: 100%;
-  height: 100%;
-  border: 0px solid white;
-  background-color: rgba(0, 0, 0, 1);
-  overflow: hidden;
+  align-items: center;
+  margin-bottom: 0.2rem;
+  width: 80%;
+  height: 50%;
+  border-radius: 50px;
+  background-color: white;
 }
 .navigator ul {
   position: relative;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 80%;
-  height: 65%;
+  width: 85%;
+  height: 100%;
   border: 0px solid red;
-  margin-bottom: 0.2rem;
-  background-color: white;
-  border-radius: 30px;
 }
 .navigator ul li {
   position: relative;
-  display: block;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  width: 25%;
+  height: 100%;
   border: 0px solid red;
 }
 .navigator ul li a {
@@ -47,55 +43,58 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
+  text-align: center;
   z-index: 20;
+  border: 0px solid red;
 }
 .navigator ul li a .icon {
   position: relative;
   display: block;
   color: var(--clr);
-  font-size: 1rem;
+  font-size: 0.8rem;
   transition: 0.5s;
   transform: translateY(0rem);
   /* transform: translateY(-1rem); */
 }
 .navigator ul li.active a .icon {
+  /* transform: translateY(-200%); */
   transform: translateY(-0.9rem);
 }
 .navigator ul li a .iconText {
   position: absolute;
   display: block;
   color: var(--clr);
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   letter-spacing: 0.05rem;
   transition: 0.5s;
   opacity: 0;
-  transform: translateY(2rem);
+  transform: translateY(3rem);
 }
 .navigator ul li.active a .iconText {
   opacity: 1;
-  transform: translateY(0.5rem);
+  transform: translateY(0.3rem);
 }
 .indicator {
   position: absolute;
   display: flex;
-  /* justify-self: self-start; */
-  width: 2rem;
-  height: 2rem;
-  top: -0.9rem;
-  left: 1.17rem; /*1.14*/
-  /* transform: translateX(2rem); */
+  left: 1%;
+  top: -2%;
+  width: 1.8rem;
+  height: 1.8rem;
   background-color: #29fd53;
   border-radius: 50px;
   border: 4px solid var(--clr);
   transition: 0.5s;
+  transform: translate(50%, -50%);
 }
 .indicator::before {
   content: "";
   position: absolute;
   width: 0.4rem;
   height: 0.4rem;
-  top: 0.58rem;
-  left: -0.57rem;
+  top: 0.57rem;
+  left: -0.55rem;
   transform: scale(1);
   background-color: transparent;
   border-top-right-radius: 20px;
@@ -107,25 +106,10 @@
   position: absolute;
   width: 0.4rem;
   height: 0.4rem;
-  top: 0.58rem;
-  right: -0.57rem;
+  top: 0.57rem;
+  right: -0.54rem;
   background-color: transparent;
   border-top-left-radius: 20px;
   border-top: 3.5px solid var(--clr);
   border-left: 3.5px solid var(--clr);
-}
-.navigator ul li:nth-child(1).active ~ .indicator {
-  transform: translateX(calc(-0.04rem));
-}
-
-.navigator ul li:nth-child(2).active ~ .indicator {
-  transform: translateX(calc(4.2rem));
-}
-
-.navigator ul li:nth-child(3).active ~ .indicator {
-  transform: translateX(calc(8.25rem));
-}
-
-.navigator ul li:nth-child(4).active ~ .indicator {
-  transform: translateX(calc(12.27rem));
 }
