--- a/Files/footer.css
+++ b/Files/footer.css
@@ -18,13 +18,16 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 0.2rem;
-  width: 80%;
+  padding: 0 0.5rem;
+  width: auto;
   height: 50%;
   border-radius: 50px;
   background-color: white;
 }
 .navigator ul {
   position: relative;
+  justify-content: center;
+  align-items: center;
   display: flex;
   width: 85%;
   height: 100%;
@@ -33,6 +36,7 @@
 .navigator ul li {
   position: relative;
   display: flex;
+  margin: 0 1.5rem;
   width: 25%;
   height: 100%;
   border: 0px solid red;
@@ -51,12 +55,20 @@
 .navigator ul li a .icon {
   position: relative;
   display: block;
+  padding: 0.3rem;
   color: var(--clr);
   font-size: 0.8rem;
   transition: 0.5s;
   transform: translateY(0rem);
+  border: 0px solid red;
+  border-radius: 50px;
+
   /* transform: translateY(-1rem); */
 }
+.navigator ul li.active a > .icon {
+  background-color: #29fd53;
+}
+
 .navigator ul li.active a .icon {
   /* transform: translateY(-200%); */
   transform: translateY(-0.9rem);
@@ -75,7 +87,7 @@
   opacity: 1;
   transform: translateY(0.3rem);
 }
-.indicator {
+/* .indicator {
   position: absolute;
   display: flex;
   left: 1%;
@@ -87,8 +99,8 @@
   border: 4px solid var(--clr);
   transition: 0.5s;
   transform: translate(50%, -50%);
-}
-.indicator::before {
+} */
+/* .indicator::before {
   content: "";
   position: absolute;
   width: 0.4rem;
@@ -112,4 +124,4 @@
   border-top-left-radius: 20px;
   border-top: 3.5px solid var(--clr);
   border-left: 3.5px solid var(--clr);
-}
+} */
