--- a/Files/body.css
+++ b/Files/body.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Exo:wght@500&family=IBM+Plex+Sans&family=Nunito+Sans:wght@700&family=Play&display=swap");
+
 .body {
   position: relative;
   display: flex;
@@ -27,8 +29,10 @@
   color: white;
   margin-top: 1.5rem;
   padding: 0 2rem;
-  font-size: 2.7rem;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 2.5rem;
+  font-family: "Play", sans-serif;
+  /* font-family: "Franklin Gothic Medium", "Arial ", Arial, sans-serif; */
+  /* font-family: "Nunito Sans", sans-serif; */
   font-weight: bolder;
   border: 1px solid white;
   border-radius: 50px;
@@ -83,8 +87,9 @@ form {
   border-radius: 50px;
   border: 1px solid white;
   background-color: rgba(23, 236, 4, 0.5);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Play", sans-serif;
+  /*font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
 }
 .formElementBody {
   position: relative;
@@ -144,6 +149,7 @@ form {
 }
 .formElement .nextBtn {
   color: white;
+  font-family: "Play", sans-serif;
   padding: 0 1.5rem;
   font-size: 2rem;
   text-decoration: none;
