--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans:wght@500&family=Nunito+Sans:wght@700&display=swap");
+/* 
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans&family=Nunito+Sans:wght@700&family=Play&display=swap"); */
+
 .body {
   position: relative;
   display: flex;
@@ -30,8 +34,9 @@
   margin-top: 0rem;
   font-size: 2rem;
   padding: 0 2rem;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Play", sans-serif;
+  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
   border: 2px solid white;
   border-radius: 50px;
   background-color: rgba(0, 0, 0, 0.7);
@@ -50,7 +55,7 @@
   overflow-y: scroll;
 }
 .matchContentPart2Acive {
-  height: 20%;
+  height: 30%;
 }
 
 .currentMatch {
@@ -115,7 +120,8 @@
   color: orange;
   margin-top: 0.5rem;
   font-size: 1.8rem;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Baloo Bhaijaan 2", cursive;
+  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
 }
 .currentMatchTime {
   position: relative;
@@ -131,7 +137,8 @@
   color: white;
   margin-top: 0.5rem;
   font-size: 1.5rem;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Baloo Bhaijaan 2", cursive;
+  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
 }
 .currentMatchBody {
   position: relative;
@@ -159,7 +166,8 @@ form {
   color: limegreen;
   margin-top: -0.5rem;
   font-size: 1.7rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Baloo Bhaijaan 2", cursive;
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 .playerNameCover {
   position: relative;
@@ -185,7 +193,9 @@ form {
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.5);
 }
-
+.playerA label {
+  font-family: "Baloo Bhaijaan 2", cursive;
+}
 .playerB {
   position: relative;
   display: flex;
@@ -197,6 +207,10 @@ form {
   border: 1px solid white;
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.5);
+}
+
+.playerB label {
+  font-family: "Baloo Bhaijaan 2", cursive;
 }
 .playerwinnerName {
   position: relative;
@@ -241,6 +255,7 @@ form {
 }
 .submitBtn a {
   color: white;
+  font-family: "Play", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.08rem;
   margin-top: 1rem;
