--- a/Files/currentPosition.css
+++ b/Files/currentPosition.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans&family=Nunito+Sans:wght@700&family=Play&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Exo:wght@500&family=IBM+Plex+Sans&family=Nunito+Sans:wght@700&family=Play&display=swap");
+
 .currentPositionCover {
   position: relative;
   display: flex;
@@ -31,8 +35,10 @@
 .profileHeading a {
   color: white;
   font-size: 1.8rem;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Play", sans-serif;
+  /* font-family: "Nunito Sans", sans-serif; */
+  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
 }
 .allProfile {
   position: relative;
@@ -81,6 +87,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   margin: 0.5rem 0;
+  margin-bottom: 0.9rem;
   width: 75%;
   height: 30%;
   min-height: 84px;
@@ -93,5 +100,7 @@
 .profileList a {
   color: black;
   letter-spacing: 0.1rem;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Exo", sans-serif;
+  /* font-family: "IBM Plex Sans", sans-serif; */
+  /* font-family: Georgia, "Times New Roman", Times, serif; */
 }
