--- a/Files/footer.css
+++ b/Files/footer.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans:wght@500&family=Nunito+Sans:wght@700&display=swap");
+
+* a {
+  font-family: "Play", sans-serif;
+}
+
 .footer {
   position: relative;
   display: flex;
@@ -49,7 +55,7 @@
   flex-direction: column;
   width: 100%;
   text-align: center;
-  z-index: 20;
+  z-index: 0;
   border: 0px solid red;
 }
 .navigator ul li a .icon {
