--- a/Files/squad.css
+++ b/Files/squad.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans:wght@300&family=Nunito+Sans:wght@700&display=swap");
+
 .body {
   position: relative;
   display: flex;
@@ -26,8 +28,9 @@
   padding: 0 1rem;
   letter-spacing: 0.1rem;
   font-size: 2rem;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Play", sans-serif;
+  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
   border: 1px solid white;
   border-radius: 50px;
   background-color: rgba(45, 85, 205, 0.5);
@@ -82,6 +85,7 @@
 .finalSquadCover a {
   color: white;
   font-size: 1.2rem;
+  font-family: "Play", sans-serif;
   letter-spacing: 0.1rem;
   /* margin-top: -1rem; */
   padding: 0.1rem 1rem;
@@ -119,8 +123,9 @@
   color: black;
   margin-top: 0.5rem; /**/
   font-size: 1.2rem;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Baloo Bhaijaan 2", cursive;
+  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", 
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;*/
 }
 .matchBoxesHeading {
   position: relative;
@@ -203,6 +208,6 @@
 .matchStartBtn #matchResult {
   color: white;
   font-size: 1rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode",
+    "Lucida Grande" "Lucida Sans", Arial, sans-serif !important;
 }
