--- a/Files/body.css
+++ b/Files/body.css
@@ -23,11 +23,11 @@
   align-items: center;
   width: 100%;
   height: 15%;
-  border: 0px solid red;
+  border: 1px solid red;
 }
 .headingBody a {
   color: white;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
   padding: 0 2rem;
   font-size: 2.5rem;
   font-family: "Play", sans-serif;
@@ -43,14 +43,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* padding: 0.5rem 0; */
   width: 100%;
   height: 85%;
   border: 0px solid white;
+  overflow: scroll;
+}
+.contentBody::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 8px black;
+  visibility: hidden;
+}
+.contentBody::-webkit-scrollbar-track {
+  background-color: transparent;
+  width: 10px;
+  height: 10px;
+}
+.contentBody::-webkit-scrollbar-thumb {
+  background: white;
+  width: 5px;
+  height: 2px;
+  border-radius: 50px;
+  border: 2px solid black;
+}
+.contentBody::-webkit-scrollbar-corner {
+  background-color: black;
+  width: 10px;
 }
 form {
   width: 85%;
   height: 85%;
-  min-height: 400px;
+  min-height: 350px;
   border: 1px solid white;
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.5);
