--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -51,7 +51,7 @@
   width: 100%;
   height: 87%;
   border: 0px solid red;
-  transition: 1s ease-in-out;
+  transition: 1s;
   overflow-y: scroll;
 }
 .matchContentPart2Acive {
