--- a/Files/currentPosition.css
+++ b/Files/currentPosition.css
@@ -10,10 +10,10 @@
   flex-wrap: wrap;
   width: 100%;
   height: 0% /*80%*/;
-  border: 2px solid white;
+  border: 2px solid #09aeff;
   border-top-right-radius: 30px;
   border-top-left-radius: 30px;
-  transition: 1s ease-in-out;
+  transition: 1s;
   background-color: black;
 }
 .currentPositionCoverActive {
