--- a/Files/footer.css
+++ b/Files/footer.css
@@ -12,7 +12,8 @@
   align-self: flex-end;
   width: 100%;
   height: 10%;
-  border: 1px solid #09aeff;
+  border-top: 1px solid #09aeff;
+  border-bottom: 1px solid #09aeff;
   overflow: hidden;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
@@ -60,6 +61,7 @@
   text-align: center;
   z-index: 0;
   border: 0px solid red;
+  cursor: pointer;
 }
 .navigator ul li a .icon {
   position: relative;
