--- a/Files/index.css
+++ b/Files/index.css
@@ -20,13 +20,52 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 30%;
-  height: 90%;
-  border: 1px solid #09aeff;
+  height: 100%;
+  border-left: 1px solid #09aeff;
+  border-right: 1px solid #09aeff;
   background-image: url(images/ocean.jpeg);
+}
+
+@media screen and (max-width: 1130px) {
+  .mobileCover {
+    width: 50%;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .mobileCover {
+    width: 60%;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .mobileCover {
+    width: 80%;
+    height: 100%;
+  }
 }
 @media screen and (max-width: 500px) {
   .mobileCover {
     width: 100%;
     height: 100%;
+  }
+}
+@media screen and (max-width: 450px) {
+  html {
+    font-size: 90%;
+  }
+  .mobileCover {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 400px) {
+  html {
+    font-size: 70%;
+  }
+}
+@media screen and (max-width: 300px) {
+  html {
+    font-size: 50%;
   }
 }
