--- a/Files/squad.css
+++ b/Files/squad.css
@@ -178,7 +178,7 @@
   font-size: 0.8rem;
   /* margin-left: 4.2rem; */
   /* margin-top: -1.7rem; */
-  transform: translate(1.3rem, -0.8rem);
+  transform: translate(1.3rem, -0.3rem);
   cursor: pointer;
 }
 .rematchBtn:hover i {
@@ -199,6 +199,7 @@
 .matchStartBtn button {
   transform: scale(1.1);
   width: 3rem;
+  /* padding: 0 -0.5rem; */
   cursor: pointer;
   margin-top: -0.5rem;
   border-radius: 20px;
@@ -209,6 +210,7 @@
 .matchStartBtn #matchResult {
   color: white;
   font-size: 1rem;
+  /* padding: 0 0.5rem; */
   font-family: "Trebuchet MS", "Lucida Sans Unicode",
     "Lucida Grande" "Lucida Sans", Arial, sans-serif !important;
 }
