--- a/Files/body.css
+++ b/Files/body.css
@@ -28,8 +28,8 @@
 .headingBody a {
   color: white;
   /* margin-top: 1.5rem; */
-  padding: 0 2.3rem;
-  font-size: 2.7rem;
+  padding: 0 2rem;
+  font-size: 2.2rem;
   font-family: "Play", sans-serif;
   /* font-family: "Franklin Gothic Medium", "Arial ", Arial, sans-serif; */
   /* font-family: "Nunito Sans", sans-serif; */
@@ -47,12 +47,12 @@
   width: 100%;
   height: 85%;
   border: 0px solid white;
-  /* overflow: scroll; */
+  /* overflow-y: scroll; */
 }
 form {
   width: 85%;
   height: 85%;
-  min-height: 400px;
+  min-height: 300px;
   border: 1px solid white;
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.5);
@@ -114,6 +114,7 @@ form {
   color: white;
   width: 50%;
   height: 50%;
+  min-height: 28px;
   border: 1px solid black;
   text-align: center;
   border-radius: 50px;
