--- a/Files/footer.css
+++ b/Files/footer.css
@@ -28,9 +28,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 0.2rem;
-  padding: 0 0.3rem;
-  width: 90%;
-  height: 65%;
+  /* padding: 0 0.3rem; */
+  width: auto;
+  height: 60%;
   border-radius: 50px;
   background-color: white;
 }
@@ -73,22 +73,19 @@
   transform: translateY(0rem);
   border: 0px solid red;
   border-radius: 50px;
-
-  /* transform: translateY(-1rem); */
 }
 .navigator ul li.active a > .icon {
   background-color: #29fd53;
 }
 
 .navigator ul li.active a .icon {
-  /* transform: translateY(-200%); */
   transform: translateY(-1.3rem);
 }
 .navigator ul li a .iconText {
   position: absolute;
   display: block;
   color: var(--clr);
-  font-size: 1rem;
+  font-size: 1.2rem;
   letter-spacing: 0.05rem;
   transition: 0.5s;
   opacity: 0;
@@ -98,41 +95,3 @@
   opacity: 1;
   transform: translateY(0.7rem);
 }
-/* .indicator {
-  position: absolute;
-  display: flex;
-  left: 1%;
-  top: -2%;
-  width: 1.8rem;
-  height: 1.8rem;
-  background-color: #29fd53;
-  border-radius: 50px;
-  border: 4px solid var(--clr);
-  transition: 0.5s;
-  transform: translate(50%, -50%);
-} */
-/* .indicator::before {
-  content: "";
-  position: absolute;
-  width: 0.4rem;
-  height: 0.4rem;
-  top: 0.57rem;
-  left: -0.55rem;
-  transform: scale(1);
-  background-color: transparent;
-  border-top-right-radius: 20px;
-  border-top: 3.5px solid var(--clr);
-  border-right: 3.5px solid var(--clr);
-}
-.indicator::after {
-  content: "";
-  position: absolute;
-  width: 0.4rem;
-  height: 0.4rem;
-  top: 0.57rem;
-  right: -0.54rem;
-  background-color: transparent;
-  border-top-left-radius: 20px;
-  border-top: 3.5px solid var(--clr);
-  border-left: 3.5px solid var(--clr);
-} */
