--- a/Files/index.css
+++ b/Files/index.css
@@ -25,29 +25,103 @@
   border-right: 1px solid #09aeff;
   background-image: url(images/ocean.jpeg);
 }
+@media screen and (max-width: 1500px) {
+  html {
+    font-size: 95%;
+  }
+  .navigator ul li a .icon {
+    font-size: 0.8rem !important;
+  }
+  .navigator ul li a .iconText {
+    font-size: 1rem !important;
+  }
+  .navigator ul li.active a .iconText {
+    transform: translateY(0.4rem) !important;
+  }
+  .navigator ul li.active a .icon {
+    transform: translateY(-1.1rem) !important;
+  }
+  .currentMatchName a {
+    font-size: 2.1rem !important;
+  }
+  .matchStartBtn,
+  #matchResult {
+    font-size: 0.9rem !important;
+  }
+  .matchTeamName a,
+  .matchCategory a {
+    font-size: 1.4rem !important;
+  }
+}
 
 @media screen and (max-width: 1130px) {
+  .mobileCover {
+    width: 40%;
+    height: 100%;
+  }
+  .matchHeading a {
+    font-size: 1.7rem !important;
+  }
+}
+@media screen and (max-width: 1000px) {
   .mobileCover {
     width: 50%;
     height: 100%;
   }
+  .currentMatchName a {
+    font-size: 2.3rem !important;
+  }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 750px) {
   .mobileCover {
-    width: 60%;
+    width: 70%;
     height: 100%;
+  }
+  .matchStartBtn,
+  #matchResult {
+    font-size: 1.2rem !important;
   }
 }
 @media screen and (max-width: 700px) {
+  html {
+    font-size: 90%;
+  }
   .mobileCover {
-    width: 85%;
+    width: 80%;
     height: 100%;
   }
 }
 @media screen and (max-width: 500px) {
+  html {
+    font-size: 80%;
+  }
   .mobileCover {
     width: 100%;
     height: 100%;
+  }
+  .formElementHeading a {
+    font-size: 1.5rem !important;
+  }
+  .headingBody a {
+    font-size: 2.7rem !important;
+  }
+  .siteNameHeader a {
+    font-size: 1.7rem !important;
+  }
+  .siteNameHeader #C {
+    font-size: 4rem !important;
+  }
+  .currentMatchName a {
+    font-size: 2.65rem !important;
+  }
+
+  .matchStartBtn,
+  #matchResult {
+    font-size: 1.5rem !important;
+  }
+  .matchTeamName a,
+  .matchCategory a {
+    font-size: 1.6rem !important;
   }
 }
 
@@ -55,13 +129,48 @@
   html {
     font-size: 80%;
   }
-}
-/* 
-@media screen and (max-width: 370px) {
-  html {
-    font-size: 75%;
+  .formElementHeading a {
+    font-size: 1.5rem !important;
   }
-}*/
+  .headingBody a {
+    font-size: 2.5rem !important;
+  }
+  .siteNameHeader a {
+    font-size: 1.5rem !important;
+  }
+  .siteNameHeader #C {
+    font-size: 3rem !important;
+  }
+  .matchStartBtn,
+  #matchResult {
+    font-size: 1.3rem !important;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  html {
+    font-size: 70%;
+  }
+  .siteNameHeader a {
+    font-size: 1.4rem !important;
+  }
+  .siteNameHeader #C {
+    font-size: 3rem !important;
+  }
+  .siteNameHeader a {
+    font-size: 1.4rem !important;
+  }
+  .siteNameHeader #C {
+    font-size: 2.7rem !important;
+  }
+  .currentMatchName a {
+    font-size: 2.5rem !important;
+  }
+  .matchStartBtn,
+  #matchResult {
+    font-size: 1.2rem !important;
+  }
+}
 /*
 @media screen and (max-width: 300px) {
   html {
