--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -39,8 +39,8 @@
 }
 .tournamentProfileHeading a {
   color: white;
-  font-size: 2.1rem;
-  padding: 0.2rem 1.1rem;
+  font-size: 1.9rem;
+  padding: 0.2rem 1rem;
   border: 1px solid white;
   background-color: rgba(226, 40, 233, 0.4);
   border-radius: 50px;
@@ -114,6 +114,7 @@
 .tntProfItems a {
   display: block;
   color: black;
+  font-size: 1.2rem;
   font-family: "Play", sans-serif;
   margin: 0.05rem 0.5rem;
   letter-spacing: 0.15rem;
@@ -123,15 +124,17 @@
   position: absolute;
   display: flex;
   font-size: 2rem;
-  transform: translateX(-4rem);
+  font-weight: bold;
+  transform: translateX(-4.7rem);
 }
 #speakingBtn {
   cursor: pointer;
-  font-size: 1rem;
   border: 1px solid white;
   background-color: rgba(45, 85, 205, 0.5);
+  padding: 0 0.5rem;
 }
 #speakingBtn a {
+  font-size: 1rem;
   color: white;
   font-family: "Play", sans-serif;
 }
