--- a/Files/squad.css
+++ b/Files/squad.css
@@ -118,14 +118,16 @@
 
 .matchTeamName a,
 .matchCategory a {
+  /* text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap; */
+  padding: 1rem 1rem;
   /* z-index: 20; */
   display: block;
   color: black;
   margin-top: 0.5rem; /**/
   font-size: 1.6rem; /*1.2*/
   font-family: "Baloo Bhaijaan 2", cursive;
-  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", 
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;*/
 }
 .matchBoxesHeading {
   position: relative;
@@ -167,19 +169,24 @@
   border: 0px solid white;
 }
 .matchStartBtn i {
+  /* position: absolute; */
+  /* transform: translateX(-100%); */
   color: white;
-  font-size: 1.5rem;
-  padding-right: 1rem;
+  font-size: 1rem;
+  margin-right: -0rem;
+}
+.rematchBtn {
+  position: absolute;
+  transform: translateX(100%);
 }
 .rematchBtn i {
   position: relative;
-  /* display: flex; */
   color: white;
   font-size: 0.8rem;
+  cursor: pointer;
+  /* display: flex; */
   /* margin-left: 4.2rem; */
   /* margin-top: -1.7rem; */
-  transform: translate(1.3rem, -0.3rem);
-  cursor: pointer;
 }
 .rematchBtn:hover i {
   font-size: 0.7rem;
@@ -201,7 +208,7 @@
   width: 3rem;
   /* padding: 0 -0.5rem; */
   cursor: pointer;
-  margin-top: -0.5rem;
+  margin-top: 0rem;
   border-radius: 20px;
   background-color: transparent;
   color: white;
@@ -209,8 +216,12 @@
 }
 .matchStartBtn #matchResult {
   color: white;
-  font-size: 1.5rem;
-  /* padding: 0 0.5rem; */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 1rem 1.5rem;
+  font-size: 1.7rem;
+  padding: 0 1rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode",
     "Lucida Grande" "Lucida Sans", Arial, sans-serif !important;
 }
